@@ -1,3 +1,8 @@
+ * Fixed handling of corrupted httpd.json and added test 300_30 for it.
+   File is removed on error and written again. Fixes #369.
+ * Added explanation in log for how to proceed when md_store.json could not be
+   parsed and prevented the server start.
+
 v2.5.0
 ----------------------------------------------------------------------------------------------------
  * Added support for ACME profiles. See README on how to use them.
